--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,5 @@
-$primary:   #463730;
-$secondary: #4D7C8A;
+$primary:   #4D7C8A;
+$secondary: #463730;
 $success:   #758E4F;
 $info:      #DFF3E4;
 $warning:   #ffc107;
