--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,7 @@
 $primary:   #4D7C8A;
 $secondary: #463730;
 $success:   #758E4F;
-$info:      #DFF3E4;
+$info:      #4D7C8A;
 $warning:   #ffc107;
 $danger:    #dc3545;
 $light:     #f8f9fa;
