--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,4 +7,15 @@ $danger:    #dc3545;
 $light:     #f8f9fa;
 $dark:      #343a40;
 
+$theme-colors: (
+  "primary":   $primary,
+  "secondary": $secondary,
+  "success":   $success,
+  "info":      $info,
+  "warning":   $warning,
+  "danger":    $danger,
+  "light":     $light,
+  "dark":      $dark
+);
+
 $rounded-borders: 15px;
