--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -8,7 +8,7 @@ $light:     #f8f9fa;
 $dark:      #343a40;
 
 $theme-colors: (
-  "primary":   $primary,
+  "primary":   #4D7C8A,
   "secondary": $secondary,
   "success":   $success,
   "info":      $info,
