--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,9 +21,6 @@
   
   <link rel="shortcut icon" type="image/x-icon" href="{{ '/assets/favicon.ico' | relative_url }}">
 
-  <!-- Font Awesome CDN -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css">
-
   <!-- Bootstrap CSS CDN -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
@@ -32,5 +29,8 @@
   
   <!-- Custom CSS -->
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}" type="text/css">
+  
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/957a5756b6.js" crossorigin="anonymous"></script>
 
 </head>
