--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,3 +1,6 @@
+<!-- Font Awesome -->
+<script src="https://kit.fontawesome.com/957a5756b6.js" crossorigin="anonymous"></script>
+
 <!-- GitHub Buttons -->
 <script async defer src="https://buttons.github.io/buttons.js"></script>
 
